--- a/styles/heading.css
+++ b/styles/heading.css
@@ -2,9 +2,14 @@
   font-size: 48px;
   line-height: 48px;
   font-weight: bold;
-  position: absolute; }
+  letter-spacing: -1.5px;
+  position: relative;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content; }
   .heading::before, .heading::after {
     position: absolute;
+    display: block;
     content: "";
     width: calc(50% - 12px);
     background-color: transparent; }
@@ -14,9 +19,14 @@
     right: 0; }
   .heading__crown {
     position: absolute;
+    display: block;
     left: 0;
     right: 0;
     top: calc(100% + 8px);
-    margin: auto; }
+    margin: auto;
+    width: 23px;
+    height: 16px;
+    background-image: url(../images/crown.svg);
+    background-repeat: no-repeat; }
 
 /*# sourceMappingURL=heading.css.map */
