--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
@@ -174,6 +173,11 @@ a:visited {
     margin: 0 auto 61px;
     text-align: center; }
 
+@media screen and (max-width: 600px) {
+  .section {
+    width: 50%;
+    margin: 0 auto; } }
+
 .info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -209,7 +213,7 @@ a:visited {
       color: #0075ff;
       margin-bottom: 16px; }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 600px) {
   .info {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -266,28 +270,23 @@ a:visited {
     text-decoration: none;
     color: #0075ff; }
 
-/* не получается с этими нижними свойствами, выдает ошибку */
-/* .photos-wide-left {
+.photos-wide-left .photos__img:first-child {
+  width: calc(67% - 10px); }
+
+.photos-wide-left .photos__img:last-child {
+  width: calc(33% - 10px); }
+
+.photos-wide-right .photos__img:first-child {
+  width: calc(33% - 10px); }
+
+.photos-wide-right .photos__img:last-child {
+  width: calc(67% - 10px); }
+
+/* @media screen and (max-width: 600px) {
   .photos__img {
-    &:first-child {
-      width: calc(67% - 10px);
-    }
-    &:last-child {
-      width: calc(33% - 10px);
-    }
+    width: calc(50% - 10px);
   }
 } */
-/* .photos-wide-right {
-  .photos__img {
-    &:first-child {
-      width: calc(33% - 10px);
-    }
-    &:last-child {
-      width: calc(67% - 10px);
-    }
-  }
-}
- */
 .gallery__caption {
   margin-top: 24px;
   margin-bottom: 40px; }
@@ -327,6 +326,13 @@ a:visited {
     width: 412px; }
   .consultation__form {
     width: 413px; }
+
+@media screen and (max-width: 600px) {
+  .consultation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
 .form {
   display: -webkit-box;
@@ -407,6 +413,12 @@ a:visited {
     margin: 4px auto; }
 
 .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 70px; }
   .contact__form {
     width: 413px; }
@@ -414,6 +426,23 @@ a:visited {
     -webkit-box-shadow: 0 13px 27px rgba(0, 83, 181, 0.46);
             box-shadow: 0 13px 27px rgba(0, 83, 181, 0.46);
     border-radius: 8px; }
+  .contact__info {
+    width: 412px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .contact__list {
+    list-style-type: none; }
+
+@media screen and (max-width: 600px) {
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; } }
 
 .footer {
   height: 359px;
