--- a/styles/main.css
+++ b/styles/main.css
@@ -67,21 +67,100 @@ a:visited {
     .nav__link:hover {
       color: #9fadc2; }
 
+.nav__toggle {
+  display: none;
+  /* opacity: 0; */
+  position: absolute;
+  top: -100%; }
+
+.nav__span,
+.nav__span::before,
+.nav__span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #fff;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s; }
+
+.nav__span::before {
+  content: "";
+  top: -8px; }
+
+.nav__span::after {
+  content: "";
+  top: 8px; }
+
+.nav__toggle:checked ~ .nav__btn > .nav__span {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.nav__toggle:checked ~ .nav__btn > .nav__span::before {
+  top: 0;
+  -webkit-transform: rotate(0);
+          transform: rotate(0); }
+
+.nav__toggle:checked ~ .nav__btn > .nav__span::after {
+  top: 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg); }
+
+.nav__toggle:checked ~ .nav__list {
+  visibility: visible;
+  top: 40px; }
+
+.nav__btn {
+  display: block;
+  position: relative;
+  /* margin: 20px auto 0; */
+  margin: 20px 90% 0;
+  width: 18px;
+  height: 12px;
+  cursor: pointer;
+  z-index: 1; }
+
 /* @media screen and (max-width: 600px) {
   .nav__list {
     display: none;
   } */
 @media screen and (max-width: 600px) {
+  .header__nav {
+    position: relative; }
   .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
-            flex-direction: column; }
-  .nav__item:last-child {
-    padding-right: 24px;
-    margin-right: 26px; }
-  .nav__item:first-child {
-    margin-left: 26px; } }
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    position: absolute;
+    visibility: hidden;
+    margin: 0 auto;
+    top: 1000%;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    width: 100%;
+    padding: 20px 0;
+    background-color: #0075ff;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s; }
+  .nav__item {
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: 2px;
+    margin-bottom: 32px; }
+    .nav__item:last-child {
+      padding-right: 24px;
+      margin-right: 26px; }
+    .nav__item:first-child {
+      margin-left: 26px; } }
 
 .header {
   display: -webkit-box;
@@ -183,6 +262,12 @@ a:visited {
     text-align: center;
     color: #000; }
 
+/* @media screen and (max-width: 320px) {
+  .section {
+    width: 50%;
+    margin: 0 auto;
+  }
+} */
 @media screen and (max-width: 600px) {
   .section {
     width: 50%;
@@ -315,6 +400,15 @@ a:visited {
 @media screen and (max-width: 600px) {
   .photos__img:first-child {
     margin-right: 19px; } }
+
+@media screen and (max-width: 320px) {
+  .photos {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; } }
 
 .gallery__caption {
   margin-top: 24px;
